bitfrost-frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitfrost-frontend
  namespace: ase-12
  labels:
    app.kubernetes.io/name: bitfrost-frontend
    app.kubernetes.io/instance: bitfrost-frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: bitfrost-frontend
      app.kubernetes.io/instance: bitfrost-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitfrost-frontend
        app.kubernetes.io/instance: bitfrost-frontend
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: app
          image: janne5656/bitfrost-frontend:1eded74fe5ced90298b8811593316fe8d97c0509
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 30

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1024Mi"

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true # Immutable root FS → mount /tmp as writable
            capabilities:
              drop: [ "ALL" ]

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/cache/nginx
              name: cache
            - mountPath: /run
              name: run
      volumes:
        - name: tmp
          emptyDir: { }
        - name: cache
          emptyDir: { }
        - name: run
          emptyDir: { }
